[gd_scene load_steps=31 format=2]

[ext_resource path="res://addons/sprite-baker/resources/theme/empty_stylebox.tres" type="StyleBox" id=1]
[ext_resource path="res://addons/sprite-baker/scenes/Scene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/sprite-baker/scripts/view_3d.gd" type="Script" id=3]
[ext_resource path="res://addons/sprite-baker/scripts/sprite_view.gd" type="Script" id=4]
[ext_resource path="res://addons/sprite-baker/resources/icons/view_right.svg" type="Texture" id=5]
[ext_resource path="res://addons/sprite-baker/resources/icons/view_top.svg" type="Texture" id=6]
[ext_resource path="res://addons/sprite-baker/resources/icons/view_rear.svg" type="Texture" id=7]
[ext_resource path="res://addons/sprite-baker/resources/icons/view_left.svg" type="Texture" id=8]
[ext_resource path="res://addons/sprite-baker/resources/icons/view_front.svg" type="Texture" id=9]
[ext_resource path="res://addons/sprite-baker/scripts/preview.gd" type="Script" id=10]
[ext_resource path="res://addons/sprite-baker/resources/icons/loop.svg" type="Texture" id=11]
[ext_resource path="res://addons/sprite-baker/resources/icons/play.svg" type="Texture" id=12]
[ext_resource path="res://addons/sprite-baker/resources/icons/stop.svg" type="Texture" id=13]
[ext_resource path="res://addons/sprite-baker/scenes/Timeline.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/sprite-baker/resources/icons/icon_clear.svg" type="Texture" id=15]
[ext_resource path="res://addons/sprite-baker/scripts/bake_options.gd" type="Script" id=16]
[ext_resource path="res://addons/sprite-baker/resources/environment.tres" type="Environment" id=17]

[sub_resource type="ButtonGroup" id=1]
resource_name = "ViewGroup"

[sub_resource type="InputEventKey" id=2]
scancode = 16777351

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventKey" id=4]
control = true
command = true
scancode = 16777351

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventKey" id=6]
scancode = 16777353

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventKey" id=8]
control = true
command = true
scancode = 16777353

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventKey" id=10]
scancode = 16777357

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="World" id=12]
environment = ExtResource( 17 )

[sub_resource type="World" id=13]
environment = ExtResource( 17 )

[node name="Preview" type="VSplitContainer" groups=[
"SpriteBaker.Model",
"SpriteBaker.Animation",
"SpriteBaker.Viewport",
]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
split_offset = 150
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
view_buttons_group = SubResource( 1 )
rx_spin_path = NodePath("Box/ControlsBox/RotationBox/RxBox/Rx")
ry_spin_path = NodePath("Box/ControlsBox/RotationBox/RyBox/Ry")
loop_button_path = NodePath("Box/ControlsBox/Box/Loop")
play_button_path = NodePath("Box/ControlsBox/PlayBox/Play")
stop_button_path = NodePath("Box/ControlsBox/PlayBox/Stop")
time_spin_path = NodePath("Box/ControlsBox/Box/Time")
timeline_path = NodePath("Box/ControlsBox/Timeline")
bake_path = NodePath("Box/ViewBox/Bake")
pixel_density_path = NodePath("OptionsScroll/OptionsGrid/PixelDensity")
root_motion_dialog_path = NodePath("OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog")
root_motion_clear_path = NodePath("OptionsScroll/OptionsGrid/RootMotionBox/RootMotionClear")
root_motion_path = NodePath("OptionsScroll/OptionsGrid/RootMotionBox/RootMotion")
bones_tree_path = NodePath("OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll/BonesTree")

[node name="Box" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 420.0
mouse_filter = 2

[node name="ViewBox" type="HBoxContainer" parent="Box"]
margin_right = 1024.0
margin_bottom = 44.0
mouse_filter = 2

[node name="Bake" type="Button" parent="Box/ViewBox"]
margin_right = 113.0
margin_bottom = 44.0
mouse_filter = 1
disabled = true
text = "Bake Animation"

[node name="OrthogonalBox" type="VBoxContainer" parent="Box/ViewBox"]
margin_left = 117.0
margin_right = 293.0
margin_bottom = 44.0
mouse_filter = 2

[node name="Label" type="Label" parent="Box/ViewBox/OrthogonalBox"]
margin_right = 176.0
margin_bottom = 14.0
text = "Orthogonal View"

[node name="OrthogonalGroup" type="HBoxContainer" parent="Box/ViewBox/OrthogonalBox"]
margin_top = 18.0
margin_right = 176.0
margin_bottom = 44.0
mouse_filter = 2

[node name="Front" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_right = 32.0
margin_bottom = 26.0
hint_tooltip = "Front view"
mouse_filter = 1
toggle_mode = true
pressed = true
shortcut = SubResource( 3 )
group = SubResource( 1 )
icon = ExtResource( 9 )

[node name="Rear" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 26.0
hint_tooltip = "Rear view"
mouse_filter = 1
toggle_mode = true
shortcut = SubResource( 5 )
group = SubResource( 1 )
icon = ExtResource( 7 )

[node name="Right" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 26.0
hint_tooltip = "Right view"
mouse_filter = 1
toggle_mode = true
shortcut = SubResource( 7 )
group = SubResource( 1 )
icon = ExtResource( 8 )

[node name="Left" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 26.0
hint_tooltip = "Left view"
mouse_filter = 1
toggle_mode = true
shortcut = SubResource( 9 )
group = SubResource( 1 )
icon = ExtResource( 5 )

[node name="Top" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 26.0
hint_tooltip = "Top view"
mouse_filter = 1
toggle_mode = true
shortcut = SubResource( 11 )
group = SubResource( 1 )
icon = ExtResource( 6 )

[node name="TabContainer" type="TabContainer" parent="Box"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 348.0
rect_min_size = Vector2( 150, 150 )
size_flags_vertical = 3
tab_align = 0

[node name="3D View" type="ViewportContainer" parent="Box/TabContainer" groups=[
"SpriteBaker.Model",
"SpriteBaker.Viewport",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
stretch = true
script = ExtResource( 3 )
scene3d_path = NodePath("Viewport3D/Scene3D")

[node name="Viewport3D" type="Viewport" parent="Box/TabContainer/3D View"]
size = Vector2( 1016, 264 )
own_world = true
world = SubResource( 12 )
transparent_bg = true
handle_input_locally = false
msaa = 1
render_target_update_mode = 3

[node name="Scene3D" parent="Box/TabContainer/3D View/Viewport3D" groups=[
"SpriteBaker.Materials",
"SpriteBaker.Animation",
] instance=ExtResource( 2 )]

[node name="Sprite" type="Panel" parent="Box/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_styles/panel = ExtResource( 1 )

[node name="SpriteView" type="ViewportContainer" parent="Box/TabContainer/Sprite" groups=[
"SpriteBaker.Model",
"SpriteBaker.Viewport",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 504, 114 )
stretch = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
scene3d_path = NodePath("Viewport3D/Scene3D")

[node name="Viewport3D" type="Viewport" parent="Box/TabContainer/Sprite/SpriteView"]
size = Vector2( 1008, 228 )
own_world = true
world = SubResource( 13 )
transparent_bg = true
handle_input_locally = false
hdr = false
render_target_update_mode = 0

[node name="Scene3D" parent="Box/TabContainer/Sprite/SpriteView/Viewport3D" groups=[
"SpriteBaker.Materials",
"SpriteBaker.Animation",
"SpriteBaker.PostProcess",
] instance=ExtResource( 2 )]

[node name="ControlsBox" type="HBoxContainer" parent="Box"]
margin_top = 352.0
margin_right = 1024.0
margin_bottom = 406.0
mouse_filter = 2
custom_constants/separation = 10

[node name="PlayBox" type="VBoxContainer" parent="Box/ControlsBox"]
margin_right = 28.0
margin_bottom = 54.0
mouse_filter = 2

[node name="Play" type="Button" parent="Box/ControlsBox/PlayBox"]
margin_right = 28.0
margin_bottom = 22.0
hint_tooltip = "Play/Pause animation"
mouse_filter = 1
disabled = true
icon = ExtResource( 12 )

[node name="Stop" type="Button" parent="Box/ControlsBox/PlayBox"]
margin_top = 26.0
margin_right = 28.0
margin_bottom = 48.0
hint_tooltip = "Stop animation"
mouse_filter = 1
disabled = true
icon = ExtResource( 13 )

[node name="Timeline" parent="Box/ControlsBox" instance=ExtResource( 14 )]
margin_left = 38.0
margin_right = 837.0
margin_bottom = 54.0

[node name="Box" type="VBoxContainer" parent="Box/ControlsBox"]
margin_left = 847.0
margin_right = 921.0
margin_bottom = 54.0
mouse_filter = 2

[node name="Loop" type="Button" parent="Box/ControlsBox/Box"]
margin_left = 23.0
margin_right = 51.0
margin_bottom = 22.0
hint_tooltip = "Animation Looping"
mouse_filter = 1
size_flags_horizontal = 4
disabled = true
toggle_mode = true
icon = ExtResource( 11 )

[node name="Time" type="SpinBox" parent="Box/ControlsBox/Box"]
margin_top = 26.0
margin_right = 74.0
margin_bottom = 50.0
hint_tooltip = "Time (in seconds)"
mouse_filter = 1
max_value = 1.0
step = 0.01
suffix = "s"

[node name="RotationBox" type="VBoxContainer" parent="Box/ControlsBox"]
margin_left = 931.0
margin_right = 1024.0
margin_bottom = 54.0
mouse_filter = 2

[node name="RxBox" type="HBoxContainer" parent="Box/ControlsBox/RotationBox"]
margin_right = 93.0
margin_bottom = 24.0
mouse_filter = 2

[node name="RxLabel" type="Label" parent="Box/ControlsBox/RotationBox/RxBox"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "Rx"

[node name="Rx" type="SpinBox" parent="Box/ControlsBox/RotationBox/RxBox"]
margin_left = 19.0
margin_right = 93.0
margin_bottom = 24.0
mouse_filter = 1
min_value = -180.0
max_value = 180.0
step = 0.1
suffix = "deg"

[node name="RyBox" type="HBoxContainer" parent="Box/ControlsBox/RotationBox"]
margin_top = 28.0
margin_right = 93.0
margin_bottom = 52.0
mouse_filter = 2

[node name="RyLabel" type="Label" parent="Box/ControlsBox/RotationBox/RyBox"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "Ry"

[node name="Ry" type="SpinBox" parent="Box/ControlsBox/RotationBox/RyBox"]
margin_left = 19.0
margin_right = 93.0
margin_bottom = 24.0
mouse_filter = 1
min_value = -180.0
max_value = 180.0
step = 0.1
suffix = "deg"

[node name="Separator" type="HSeparator" parent="Box"]
margin_top = 410.0
margin_right = 1024.0
margin_bottom = 420.0
mouse_filter = 2
custom_styles/separator = ExtResource( 1 )
custom_constants/separation = 10

[node name="OptionsScroll" type="ScrollContainer" parent="."]
margin_top = 432.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1

[node name="OptionsGrid" type="GridContainer" parent="OptionsScroll" groups=[
"SpriteBaker.BakeOptions",
]]
margin_right = 1024.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
script = ExtResource( 16 )
pixel_density_path = NodePath("PixelDensity")
margin_path = NodePath("Margin")
bones_tree_path = NodePath("RootMotionBox/RootMotion/RootMotionDialog/Scroll/BonesTree")

[node name="PixelDensityLabel" type="Label" parent="OptionsScroll/OptionsGrid"]
margin_top = 5.0
margin_right = 115.0
margin_bottom = 19.0
text = "Pixel density"

[node name="PixelDensity" type="SpinBox" parent="OptionsScroll/OptionsGrid"]
margin_left = 119.0
margin_right = 217.0
margin_bottom = 24.0
mouse_filter = 1
min_value = 1.0
max_value = 7680.0
value = 32.0

[node name="Separator1" type="VSeparator" parent="OptionsScroll/OptionsGrid"]
margin_left = 221.0
margin_right = 246.0
margin_bottom = 24.0
mouse_filter = 2
custom_styles/separator = ExtResource( 1 )
custom_constants/separation = 25

[node name="MarginLabel" type="Label" parent="OptionsScroll/OptionsGrid"]
margin_left = 250.0
margin_top = 5.0
margin_right = 293.0
margin_bottom = 19.0
text = "Margin"

[node name="Margin" type="SpinBox" parent="OptionsScroll/OptionsGrid"]
margin_left = 297.0
margin_right = 371.0
margin_bottom = 24.0
mouse_filter = 1
max_value = 7680.0
suffix = "px"

[node name="RootMotionLabel" type="Label" parent="OptionsScroll/OptionsGrid"]
margin_top = 32.0
margin_right = 115.0
margin_bottom = 46.0
text = "Root Motion Track"

[node name="RootMotionBox" type="HBoxContainer" parent="OptionsScroll/OptionsGrid"]
margin_left = 119.0
margin_top = 28.0
margin_right = 217.0
margin_bottom = 50.0

[node name="RootMotion" type="Button" parent="OptionsScroll/OptionsGrid/RootMotionBox"]
margin_right = 66.0
margin_bottom = 22.0
size_flags_horizontal = 3
disabled = true
text = "Assign..."

[node name="RootMotionDialog" type="ConfirmationDialog" parent="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion"]
margin_right = 200.0
margin_bottom = 70.0
window_title = "Edit Root Motion Track"

[node name="Scroll" type="ScrollContainer" parent="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonesTree" type="Tree" parent="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll"]
margin_right = 184.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RootMotionClear" type="Button" parent="OptionsScroll/OptionsGrid/RootMotionBox"]
margin_left = 70.0
margin_right = 98.0
margin_bottom = 22.0
size_flags_horizontal = 3
disabled = true
icon = ExtResource( 15 )

[node name="Separator2" type="VSeparator" parent="OptionsScroll/OptionsGrid"]
margin_left = 221.0
margin_top = 28.0
margin_right = 246.0
margin_bottom = 50.0
mouse_filter = 2
custom_styles/separator = ExtResource( 1 )
custom_constants/separation = 25
[connection signal="pressed" from="Box/ViewBox/Bake" to="." method="_on_Bake_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Front" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Rear" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Right" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Left" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Top" to="." method="_on_view_pressed"]
[connection signal="resized" from="Box/TabContainer/Sprite" to="Box/TabContainer/Sprite/SpriteView" method="_on_Sprite_resized"]
[connection signal="pixel_density_changed" from="Box/TabContainer/Sprite/SpriteView" to="." method="_on_SpriteView_pixel_density_changed"]
[connection signal="pressed" from="Box/ControlsBox/PlayBox/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Box/ControlsBox/PlayBox/Stop" to="." method="_on_Stop_pressed"]
[connection signal="time_changed" from="Box/ControlsBox/Timeline" to="." method="_on_Timeline_time_changed"]
[connection signal="toggled" from="Box/ControlsBox/Box/Loop" to="." method="_on_Loop_toggled"]
[connection signal="value_changed" from="OptionsScroll/OptionsGrid/PixelDensity" to="Box/TabContainer/Sprite/SpriteView" method="_on_PixelDensity_value_changed"]
[connection signal="pressed" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion" to="." method="_on_RootMotion_pressed"]
[connection signal="confirmed" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog" to="." method="_on_RootMotionDialog_confirmed"]
[connection signal="item_activated" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll/BonesTree" to="." method="_on_BonesTree_item_activated"]
[connection signal="pressed" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotionClear" to="." method="_on_RootMotionClear_pressed"]
